Finished the example
Coding finished but not tested